# markov-api

./: .env  .gitignore  .gitlab-ci.yml  LICENSE.txt  README.md  pyproject.toml  requirements.txt
src/: main.py  sample_txt.py
src/core/: config.py
src/lib/: file_adaptor.py
src/lib/generate_sentence/: markov.py  validator.py
src/routers/: markov.py
src/schemas/: sentences.py  text.py
src/services/: generate_sentence.py  meros.txt
